--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# Rust
 /target
+Cargo.lock
+
+# Environment
+.env
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+docker-compose.override.yml
+
+# SQLx
+.sqlx/
+
+# Logs
+*.log
+
+# Database backups
+backup_*.sql
+*.dump
 .idea
 vcs.xml
+cedar_schema.json
