--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,24 @@ members = [
 resolver = "2"
 
 [package]
-name = "hodei_cedar_mvp_kernel"
+name = "hodei-policies"
 version = "0.1.0"
 edition = "2024"
+authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
+description = "Multi-tenant authorization engine with Cedar Policy - Demo application (use hodei-kernel, hodei-provider, hodei-domain for libraries)"
+license = "MIT"
+repository = "https://github.com/Rubentxu/hodei-policies"
+homepage = "https://github.com/Rubentxu/hodei-policies"
+keywords = ["authorization", "cedar", "policy", "multi-tenant", "security"]
+categories = ["authentication", "web-programming"]
+readme = "README.md"
 build = "build.rs"
+publish = false
 
 [dependencies]
-kernel = { path = "kernel", features = ["sqlx"] }
-hodei_provider = { path = "hodei_provider" }
-hodei_domain = { path = "hodei_domain" }
+hodei-kernel = { path = "kernel", features = ["sqlx"] }
+hodei-provider = { path = "hodei_provider" }
+hodei-domain = { path = "hodei_domain" }
 
 axum = { version = "0.8.6", features = ["macros"] }
 axum-extra = { version = "0.10.3", features = ["typed-header"] }
@@ -34,8 +43,8 @@ uuid = { version = "1.10", features = ["v4", "serde"] }
 
 [build-dependencies]
 serde_json = "1.0.117"
-hodei_provider = { path = "hodei_provider" }
-hodei_domain = { path = "hodei_domain", features = ["schema-discovery"] }
+hodei-provider = { path = "hodei_provider" }
+hodei-domain = { path = "hodei_domain", features = ["schema-discovery"] }
 
 [features]
 schema-discovery = []
