feat: implement REST API with full CRUD handlers and normalize HTTP standards
- Add complete CRUD handlers for documents and artifacts
- Implement authorization with Cedar Policy for all endpoints
- Normalize REST API to follow HTTP standards (RFC 7231)
  * CREATE endpoints return 201 Created with Location header
  * UPDATE endpoints return 200 OK with updated resource
  * DELETE endpoints return 204 No Content
  * LIST endpoints return simple arrays without wrappers
- Standardize field names (use 'id' consistently)
- Remove unnecessary 'message' fields from success responses
- Add Redis to docker-compose.dev.yml for cache invalidation
- Update Makefile to use 'docker compose' (without hyphen)
- Fix Redis API deprecation warnings
- Update all tests to expect correct HTTP status codes

BREAKING CHANGE: Policy API responses changed format
- POST /_api/policies now returns 201 with Location header
- GET /_api/policies now returns array instead of object wrapper
- Field 'policy_id' renamed to 'id' for consistency

Tests: All 28 tests passing (16 documents + 12 artifacts)
Closes: #compilation-errors #rest-normalization

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -54,6 +54,19 @@ services:
     depends_on:
       - postgres
 
+  # Redis - Para cache invalidation
+  redis:
+    image: redis:7-alpine
+    container_name: hodei_redis_dev
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
 volumes:
   postgres_dev_data:
   pgadmin_dev_data:
