--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,54 +1,38 @@
 [workspace]
 members = [
-    "kernel",
-    "hodei_provider",
-    "hodei_provider_derive",
-    "hodei_domain",
+    "crates/kernel",
+    "crates/hodei_provider",
+    "crates/hodei_provider_derive",
+    "crates/hodei_domain",
+    "crates/app",
 ]
 resolver = "2"
 
-[package]
-name = "hodei-policies"
-version = "0.1.0"
-edition = "2024"
-authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
-description = "Multi-tenant authorization engine with Cedar Policy - Demo application (use hodei-kernel, hodei-provider, hodei-domain for libraries)"
-license = "MIT"
-repository = "https://github.com/Rubentxu/hodei-policies"
-homepage = "https://github.com/Rubentxu/hodei-policies"
-keywords = ["authorization", "cedar", "policy", "multi-tenant", "security"]
-categories = ["authentication", "web-programming"]
-readme = "README.md"
-build = "build.rs"
-publish = false
-
-[dependencies]
-hodei-kernel = { path = "kernel", features = ["sqlx"] }
-hodei-provider = { path = "hodei_provider" }
-hodei-domain = { path = "hodei_domain" }
-
+[workspace.dependencies]
 axum = { version = "0.8.6", features = ["macros"] }
 axum-extra = { version = "0.10.3", features = ["typed-header"] }
-tokio = { version = "1.37.0", features = ["full"] }
-sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
+tokio = { version = "1.48.0", features = ["full"] }
+sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros"] }
 dotenvy = "0.15.7"
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.117"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 thiserror = "2.0.17"
 cedar-policy = "4.7.0"
-async-trait = "0.1.80"
-uuid = { version = "1.10", features = ["v4", "serde"] }
-
-[build-dependencies]
-serde_json = "1.0.117"
-hodei-provider = { path = "hodei_provider" }
-hodei-domain = { path = "hodei_domain", features = ["schema-discovery"] }
-
-[features]
-schema-discovery = []
-
-# Configuración para SQLx offline mode
-[package.metadata.sqlx]
-offline = true
+async-trait = "0.1.89"
+uuid = { version = "1.18.1", features = ["v4", "serde"] }
+validator = { version = "0.20.0", features = ["derive"] }
+redis = { version = "0.25.4", features = ["tokio-comp"] }
+futures-util = "0.3.31"
+anyhow = "1.0.100"
+reqwest = { version = "0.12.24", features = ["json"] }
+sqlx-cli = "0.7.4"
+syn = { version = "2.0.106", features = ["full"] }
+quote = "1.0.41"
+proc-macro2 = "1.0.101"
+inventory = "0.3.21"
+hodei-kernel = { path = "crates/kernel" }
+hodei-provider-derive = { path = "crates/hodei_provider_derive" }
+hodei-provider = { path = "crates/hodei_provider" }
+hodei-domain = { path = "crates/hodei_domain" }
