feat(sdk)!: implement complete SDK with auto-discovery and builder pattern
BREAKING CHANGE: Rename all crates to descriptive names

- Rename hodei-kernel -> hodei-hrn
- Rename hodei-core -> hodei-authz
- Rename hodei-postgres -> hodei-authz-postgres
- Rename hodei-redis -> hodei-authz-redis
- Rename hodei-axum -> hodei-authz-axum
- Rename hodei -> hodei-authz-sdk

Features:
- Add schema auto-discovery using inventory
- Implement HodeiAuthServiceBuilder with fluent API
- Add auto_discover_schema() for automatic Cedar schema generation
- Create comprehensive prelude module for easy imports
- Implement complete example application with 23 passing tests

Example Application:
- Create User and Document domain entities
- Implement 8 Cedar policies (RBAC + ABAC + ReBAC)
- Add AuthService with PostgreSQL and Redis integration
- Create REST API with 8 endpoints
- Add comprehensive bash test suite (23/23 tests passing)

Infrastructure:
- Update docker-compose.dev.yml with Redis support
- Add automated test runner script (run_tests.sh)
- Create START_DEV.sh for quick environment setup
- Add QUICK_START.md and APP_EXAMPLE_COMPLETE.md documentation

Tests:
- All 23 API tests passing
- Owner-based permissions validated
- Role-based access control (Admin/Editor/Viewer) working
- Public document access verified
- Cedar Policy authorization functional

Closes #refactoring
Closes #sdk-implementation

--- a/crates/hodei_domain/Cargo.toml
+++ b/crates/hodei_domain/Cargo.toml
@@ -13,8 +13,9 @@ categories = ["authentication", "web-programming"]
 readme = "../README.md"
 
 [dependencies]
-hodei-provider = { workspace = true }
-hodei-kernel = { path = "../kernel", workspace = true }
+hodei-hrn = { workspace = true }
+hodei-authz = { workspace = true }
+hodei-derive = { workspace = true }
 cedar-policy = { workspace = true }
 serde = { workspace = true }
 sqlx = { workspace = true, features = ["postgres", "macros"] }
