--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,41 @@
 [workspace]
 members = [
-    "crates/kernel",
-    "crates/hodei_provider",
-    "crates/hodei_provider_derive",
+    "crates/hodei-hrn",
+    "crates/hodei-derive",
+    "crates/hodei-authz",
+    "crates/hodei-authz-postgres",
+    "crates/hodei-authz-redis",
+    "crates/hodei-authz-axum",
+    "crates/hodei-authz-sdk",
     "crates/hodei_domain",
-    "crates/app",
+    "crates/app-example",
 ]
 resolver = "2"
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+authors = ["Hodei Contributors"]
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/yourusername/hodei"
+homepage = "https://github.com/yourusername/hodei"
+documentation = "https://docs.rs/hodei"
+
 [workspace.dependencies]
+# Internal crates
+hodei-hrn = { version = "0.1.0", path = "crates/hodei-hrn" }
+hodei-authz = { version = "0.1.0", path = "crates/hodei-authz" }
+hodei-derive = { version = "0.1.0", path = "crates/hodei-derive" }
+hodei-authz-postgres = { version = "0.1.0", path = "crates/hodei-authz-postgres" }
+hodei-authz-redis = { version = "0.1.0", path = "crates/hodei-authz-redis" }
+hodei-authz-axum = { version = "0.1.0", path = "crates/hodei-authz-axum" }
+hodei-authz-sdk = { version = "0.1.0", path = "crates/hodei-authz-sdk" }
+
+# External dependencies (using existing versions)
 axum = { version = "0.8.6", features = ["macros"] }
 axum-extra = { version = "0.10.3", features = ["typed-header"] }
 tokio = { version = "1.48.0", features = ["full"] }
-sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
 dotenvy = "0.15.7"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
@@ -23,16 +46,16 @@ cedar-policy = "4.7.0"
 async-trait = "0.1.89"
 uuid = { version = "1.18.1", features = ["v4", "serde"] }
 validator = { version = "0.20.0", features = ["derive"] }
-redis = { version = "0.25.4", features = ["tokio-comp"] }
+redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
 futures-util = "0.3.31"
 anyhow = "1.0.100"
 reqwest = { version = "0.12.24", features = ["json"] }
-sqlx-cli = "0.7.4"
+sqlx-cli = "0.8.6"
 syn = { version = "2.0.106", features = ["full"] }
 quote = "1.0.41"
 proc-macro2 = "1.0.101"
 inventory = "0.3.21"
-hodei-kernel = { path = "crates/kernel" }
-hodei-provider-derive = { path = "crates/hodei_provider_derive" }
-hodei-provider = { path = "crates/hodei_provider" }
+chrono = { version = "0.4", features = ["serde"] }
+
+# Legacy paths (will be removed)
 hodei-domain = { path = "crates/hodei_domain" }
