feat: publish hodei-authz SDK to crates.io and organize scripts
✨ Features:
- Published 7 crates to crates.io (hodei-hrn, hodei-derive, hodei-authz, hodei-authz-postgres, hodei-authz-redis, hodei-authz-axum, hodei-authz-sdk)
- Centralized all bash scripts in scripts/ directory
- Added Makefile.publish for publication automation
- Implemented workspace = true for local development

📦 Crates Published:
- hodei-hrn v0.1.0 - Hierarchical Resource Names
- hodei-derive v0.1.0 - Derive macros for Cedar schemas
- hodei-authz v0.1.0 - Core authorization with Cedar Policy
- hodei-authz-postgres v0.1.0 - PostgreSQL policy store
- hodei-authz-redis v0.1.0 - Redis cache invalidation
- hodei-authz-axum v0.1.0 - Axum web framework integration
- hodei-authz-sdk v0.1.0 - Complete SDK with builder pattern

🔧 Configuration:
- Updated all Cargo.toml to use workspace = true for internal deps
- Added edition = 2024 to all crates
- Configured dual licensing (MIT OR Apache-2.0)
- Added proper metadata (description, keywords, categories)
- Fixed conditional compilation for optional features

📜 Scripts Organization:
- Created scripts/ directory with all automation scripts
- Added dev-setup.sh for environment configuration
- Added clean.sh for project cleanup
- Moved all publish scripts to scripts/
- Integrated scripts with Makefile commands

📚 Documentation:
- Added WORKSPACE_VERSIONING.md explaining versioning strategy
- Added SCRIPTS_GUIDE.md for scripts usage
- Added scripts/README.md with detailed script documentation
- Added PUBLICATION_SUCCESS.md with publication summary
- Updated all crate READMEs

🧹 Cleanup:
- Yanked old crates (hodei-provider, hodei-provider-derive, hodei-kernel)
- Removed obsolete documentation files
- Organized project structure

BREAKING CHANGE: Renamed crates from hodei-provider to hodei-authz namespace

--- a/crates/app-example/Cargo.toml
+++ b/crates/app-example/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "app-example"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
 description = "Example application using Hodei Framework - Multi-tenant authorization with Cedar Policy"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/Rubentxu/hodei-policies"
 homepage = "https://github.com/Rubentxu/hodei-policies"
 keywords = ["authorization", "cedar", "policy", "example"]
