--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,13 @@
 [workspace]
-members = [
-    "crates/hodei-hrn",
-    "crates/hodei-derive",
-    "crates/hodei-authz",
-    "crates/hodei-authz-postgres",
-    "crates/hodei-authz-redis",
-    "crates/hodei-authz-axum",
-    "crates/hodei-authz-sdk",
-    "crates/hodei_domain",
-    "crates/app-example",
-]
+members = ["crates/hodei-authz-sdk"]
 resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
-edition = "2021"
-authors = ["Hodei Contributors"]
+edition = "2024"
+authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/yourusername/hodei"
-homepage = "https://github.com/yourusername/hodei"
-documentation = "https://docs.rs/hodei"
-
-[workspace.dependencies]
+repository = "https://github.com/Rubentxu/hodei-policies"
 # Internal crates
 hodei-hrn = { version = "0.1.0", path = "crates/hodei-hrn" }
 hodei-authz = { version = "0.1.0", path = "crates/hodei-authz" }
