--- a/crates/hodei_domain/Cargo.toml
+++ b/crates/hodei_domain/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
 description = "Domain entities and commands for Hodei authorization with Cedar Policy"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/Rubentxu/hodei-policies"
 homepage = "https://github.com/Rubentxu/hodei-policies"
 documentation = "https://docs.rs/hodei-domain"
